// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DescriptionList /> renders the description list properly 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  box-sizing: border-box;
}

.emotion-1 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.8125rem;
  line-height: 1.25;
  margin-bottom: 0.25rem;
  box-sizing: border-box;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #25272D;
  font-size: 0.875rem;
  line-height: 1.25;
  margin-bottom: 1rem;
  box-sizing: border-box;
}

<Styled(dl)>
  <dl
    className="emotion-0"
  >
    <Styled(dt)
      color="text.muted"
      fontSize="size3"
      lineHeight="small"
      mb="smallest"
    >
      <dt
        className="emotion-1"
        color="text.muted"
        fontSize="size3"
      >
        Term 1
      </dt>
    </Styled(dt)>
    <Styled(dd)
      color="text.default"
      fontSize="size4"
      lineHeight="small"
      mb="regular"
    >
      <dd
        className="emotion-2"
        color="text.default"
        fontSize="size4"
      >
        Term 1 Details
      </dd>
    </Styled(dd)>
    <Styled(dt)
      color="text.muted"
      fontSize="size3"
      lineHeight="small"
      mb="smallest"
    >
      <dt
        className="emotion-1"
        color="text.muted"
        fontSize="size3"
      >
        Term 2
      </dt>
    </Styled(dt)>
    <Styled(dd)
      color="text.default"
      fontSize="size4"
      lineHeight="small"
      mb="regular"
    >
      <dd
        className="emotion-2"
        color="text.default"
        fontSize="size4"
      >
        Term 2 Details
      </dd>
    </Styled(dd)>
    <Styled(dt)
      color="text.muted"
      fontSize="size3"
      lineHeight="small"
      mb="smallest"
    >
      <dt
        className="emotion-1"
        color="text.muted"
        fontSize="size3"
      >
        Term 3
      </dt>
    </Styled(dt)>
    <Styled(dd)
      color="text.default"
      fontSize="size4"
      lineHeight="small"
      mb="regular"
    >
      <dd
        className="emotion-2"
        color="text.default"
        fontSize="size4"
      >
        Term 3 Details
      </dd>
    </Styled(dd)>
  </dl>
</Styled(dl)>
`;

exports[`<DescriptionList /> supports polymorphic as prop 1`] = `
.emotion-0 {
  font-family: Motiva Sans;
  box-sizing: border-box;
}

.emotion-1 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: grid;
  grid-template-columns: 1fr;
  font-family: Motiva Sans;
  box-sizing: border-box;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 0.8125rem;
  line-height: 1.25;
  margin-bottom: 0.25rem;
  box-sizing: border-box;
}

.emotion-3 {
  font-family: Motiva Sans;
  color: #25272D;
  font-size: 0.875rem;
  line-height: 1.25;
  margin-bottom: 1rem;
  box-sizing: border-box;
}

<Styled(dl)
  as={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "__emotion_base": "div",
      "__emotion_forwardProp": undefined,
      "__emotion_real": [Circular],
      "__emotion_styles": Array [
        "
  ",
        [Function],
        ";

  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
",
        "
  box-sizing: border-box;
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
",
        "
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
  ",
        [Function],
        ";
",
      ],
      "defaultProps": Object {
        "display": "grid",
      },
      "render": [Function],
      "withComponent": [Function],
    }
  }
  gridTemplateColumns="1fr"
>
  <Styled(div)
    className="emotion-0"
    display="grid"
    gridTemplateColumns="1fr"
  >
    <div
      className="emotion-1"
      display="grid"
    >
      <Styled(dt)
        color="text.muted"
        fontSize="size3"
        lineHeight="small"
        mb="smallest"
      >
        <dt
          className="emotion-2"
          color="text.muted"
          fontSize="size3"
        >
          Term 1
        </dt>
      </Styled(dt)>
      <Styled(dd)
        color="text.default"
        fontSize="size4"
        lineHeight="small"
        mb="regular"
      >
        <dd
          className="emotion-3"
          color="text.default"
          fontSize="size4"
        >
          Term 1 Details
        </dd>
      </Styled(dd)>
    </div>
  </Styled(div)>
</Styled(dl)>
`;
